--- a/package.json
+++ b/package.json
@@ -26,7 +26,16 @@
     "pg": "^6.2.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-bootstrap": "^0.31.5",
+    "react-modal": "^2.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-burger-menu": "^2.2.3",
+    "redux-burger-menu": "^0.2.4",
+    "redux": "^3.7.2",
+    "redux-api-middleware": "^2.2.0",
+    "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
     "cross-env": "^5.1.3",
