--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.1",
     "express-bearer-token": "^2.1.1",
     "jsonwebtoken": "^8.2.0",
@@ -25,16 +26,16 @@
     "npm-run-all": "^4.1.1",
     "pg": "^6.2.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
     "react-bootstrap": "^0.31.5",
+    "react-burger-menu": "^2.2.3",
+    "react-dom": "^16.2.0",
     "react-modal": "^2.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-burger-menu": "^2.2.3",
-    "redux-burger-menu": "^0.2.4",
+    "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-api-middleware": "^2.2.0",
+    "redux-burger-menu": "^0.2.4",
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
