--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "savtym",
   "private": true,
   "scripts": {
-    "server": "node app/server.js",
+    "server": "nodemon app/server.js",
     "start-js": "cross-env NODE_PATH=src/ react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "debug": "cross-env REACT_APP_DEV_DEBUG=debug npm-run-all -p watch-css start-js",
@@ -41,6 +41,7 @@
   "devDependencies": {
     "cross-env": "^5.1.3",
     "file-loader": "^1.1.9",
+    "nodemon": "^1.17.3",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.3.0"
